# ordo

./: LICENSE  README.md  pyproject.toml
src/ordo/: docker-compose.yml
src/ordo/app/: main.py
